# discord-election-bot

./: .gitignore  .replit  README.org  channelids.json  election_data.json  full_message.json  ktm_data.json  main.py  message.json  message_formatter.py  news.py  pyproject.toml  requirements.txt  scraper.py
